--- a/package.json
+++ b/package.json
@@ -7,23 +7,29 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "express": "^4.17.1",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-slick": "^0.27.13",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "serve": "^11.3.2",
+    "slick-carousel": "^1.8.1",
     "slug": "^4.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server/server"
   },
   "eslintConfig": {
     "extends": [
